Fix zoom in feature on mobiles when tapping fast
iOS' Safari zoomed in the website when user make a double tap (on the
'Attack' button for example, or any other part of the page).

Adding `..., maximum-scale=1.0, user-scalable=no` value to the viewport
metatag content didn't work, so we found a CSS-workaround which seems
working.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,10 @@
 
 /* This file is for your main application CSS */
 
+* {
+  touch-action: manipulation;
+}
+
 .btn-respawn {
   @apply border border-amber-500 bg-amber-100 rounded drop-shadow-lg text-amber-600 text-sm font-bold px-2 py-1 hover:bg-amber-50 active:saturate-200;
 }
